fix legibility of card text

--- a/assets/_scss/_glint.scss
+++ b/assets/_scss/_glint.scss
@@ -2720,15 +2720,14 @@ html.no-csstransitions .home-content__main {
 
 .item-folio__text {
   position: absolute;
-  left: 0;
-  bottom: 3.6rem;
-  padding: 0 3.3rem;
+  left: 0px;
+  bottom: 0px;
+  right: 0px;
   z-index: 2;
-  opacity: 0.7;
-  -webkit-transform: translate3d(0, 100%, 0);
-  -ms-transform: translate3d(0, 100%, 0);
-  transform: translate3d(0, 100%, 0);
-  -webkit-transition: all 0.3s ease-in-out;
+  text-shadow: rgb(0, 0, 0) 0px 1px 4px;
+  transform: translate3d(0px, 20%, 0px);
+  padding: 1rem 3.3rem 3rem;
+  background: linear-gradient(0deg, rgb(17, 17, 17), transparent);
   transition: all 0.3s ease-in-out;
 }
 
